# spine-runtimes

./: .gitignore  CMakeLists.txt
spine-c/: CMakeLists.txt
spine-c/include/spine/: Animation.h  extension.h
spine-c/src/spine/: Animation.c  Bone.c  IkConstraint.c  SkeletonJson.c  TransformConstraint.c
spine-cocos2d-iphone/: CMakeLists.txt  README.md
spine-cocos2d-iphone/spine-cocos2d-iphone-ios.xcodeproj/: project.pbxproj
spine-cocos2d-objc/: README.md
spine-cocos2dx/: CMakeLists.txt
spine-cocos2dx/example/proj.win32/: spine-cocos2d-x.sln
spine-sfml/: README.md
